# ZeroAlpha

./: .env.example  .gitignore  LICENSE  README.md  constraints-py314.txt  pyproject.toml
configs/: live.example.toml  paper.example.toml
docs/: crypto-futures-strategy.md  spot-crypto-strategy.md
scripts/: ibkr_1s_experiment_suite.py
src/zeroalpha/: __init__.py  bars.py  cli.py  config.py  costs.py  domain.py  timeutils.py
src/zeroalpha/backtest/: __init__.py  fills.py  ml.py  simple.py
src/zeroalpha/broker/: ibkr.py  pacing.py  quote_recorder.py  streaming.py
src/zeroalpha/candidates/: __init__.py  events.py  rules.py
src/zeroalpha/data/: __init__.py  health.py  quality.py  storage.py
src/zeroalpha/db/: __init__.py  schema.py
src/zeroalpha/execution/: decision.py  orders.py  state_machine.py
src/zeroalpha/features/: basic.py  kronos.py  regime.py
src/zeroalpha/labels/: __init__.py  triple_barrier.py
src/zeroalpha/models/: __init__.py  artifact.py  (+9 more)
tests/: test_backtest_risk.py  test_candidates_dense.py  test_cli_safety.py  test_colab_research.py  test_config.py  test_costs.py  test_cross_asset_features.py  test_data_sources.py  test_dataset_features.py  test_decision.py  test_features_duration.py  test_fills.py  test_horizon_semantics.py  test_ibkr_broker.py  test_ibkr_experiments.py  test_ibkr_quote_features.py  test_kronos_features.py  test_labels.py  test_ml_backtest.py  test_model_ensemble.py  test_orders.py  test_pacing.py  test_prediction_market_features.py  test_purged.py  test_quality.py  test_risk.py  test_runtime_events.py  test_schema.py  test_streaming_bars.py
(+8 files in other folders)
